name:           HelloHapp
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         Ben James

executable HelloHapp
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:
                   base >= 4,
                   happstack-server >= 7.1.0,
                   happstack-hsp >= 7.1.0,
                   hsx >= 0.9.2,
                   hsp >= 0.9.2,
                   hsx2hs >= 0.13,
                   text >= 0.11.3,
                   mtl  >= 2.1.1,
                   aeson >= 0.6
  ghc-options:     -Wall
  other-modules:
                   Model,
                   Views
